syntax = "proto3";

package hello.v1;

service HelloService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
  rpc Version (VersionRequest) returns (VersionResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

message VersionRequest {}

message VersionResponse {
  string version = 1;
}